# NL2CMD

./: Readme.md  pyproject.toml
nl2cmd/: __init__.py  cli.py  copilot_client.py  executor.py  prompt.py  translator.py
nl2cmd.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
scripts/: trans
